--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,3 @@
 # This file should be checked into version control systems
-project.name=myproject
-dist.name=myproject
+project.name=AndroidAssetStudio
+dist.name=AndroidAssetStudio
